# ChangeLog for sci-astronomy/missfits
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> -Manifest,
  -files/missfits-2.4.0-configure.patch, -missfits-2.4.0.ebuild,
  missfits-9999.ebuild:
  sci-astronomy/missfits: EAPI-5, autotools-utils

*missfits-9999 (09 Jul 2012)

  09 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> missfits-2.4.0.ebuild,
  +missfits-9999.ebuild, metadata.xml:
  Added live version, fixed for respecting flags, keyword amd64-linux,
  x86-linux

  04 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Switched herd to sci-astronomy

  25 Jun 2011; Justin Lecher <jlec@gentoo.org> missfits-2.4.0.ebuild,
  metadata.xml:
  Cleaned ebuild, unused local USE-description: 'plplot'

*missfits-2.4.0 (18 Nov 2010)

  18 Nov 2010; Sébastien Fabbro <bicatali@gentoo.org> +missfits-2.4.0.ebuild,
  +files/missfits-2.4.0-configure.patch, +metadata.xml:
  Initial import