@@ -1,0 +1,1 @@
+DIST missfits-2.8.0.tar.gz 428404 SHA256 65772902ec29c33768bd579aefa577acbd93b671423e5edb2621ffaddd695912 SHA512 32727f5eb30573a1cedacb8900e2536867e4815059eee32e64e3db65be9291b8a91b9f45b2c9f3cf6fc2a8cc448012ea3d502bdd9dee516008e17d5086aee795 WHIRLPOOL d3b7a429b3fb97ebf7df2fa7c64fc20579cad9f6ba2ebeec9b58943d2b05a794eea4846b6cfa7fc9e33fc4e4bf3f7e09e4fcb2d7a5c63cd446f55107be280a7e
